# zmathlib-graphics

./: .gitignore  CMakeLists.txt  LICENSE  README  build.sh  todo.cpp
include/: quaternion.hpp
src/: main.cpp  mathtype.hpp  mathtypepointerlist.cpp  matrix.cpp  matrix.hpp  matrix_builtin_transforms.cpp  matrix_compare.cpp  matrix_mtx.cpp  matrix_ops_apply.cpp  matrix_scalar.cpp  matrix_unary.cpp  matrix_vec.cpp  quaternion.cpp  tests.hpp  vec2.cpp  vec3.cpp  vec4.cpp  vector.hpp
